tests/NormalTests/paczka1/fuzzy1/19503248.err
Error in line 5: RWq49C9QN A637 -1,2
Error in line 1: RWq49C9QN A637 13,3
Error in line 21: RWq49C9QN A994 -5,7
Error in line 14: RWq49C9QN A994 85,8
Error in line 25: X1As2fLtz9Q S753 25,7
Error in line 36: Npz A637 73,98
Error in line 37: Npz A637 -5,6
Error in line 33: RWq49C9QN A994 28,0
